fixed cropped plant images

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,10 +13,10 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #ebbcc6aa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #c4d18baa);
 }
 
 @keyframes logo-spin {
@@ -39,5 +39,5 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: #ebbcc6;
 }
